# vira

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md
.github/actions/build-cmake/: action.yml
.github/actions/build-python-cmake/: action.yml
.github/actions/cmake-configure/: action.yml
.github/actions/cmake-configure-docs/: action.yml
.github/actions/cmake-configure-test/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/configure-python-cmake/: action.yml
.github/actions/setup-build/: action.yml
.github/actions/setup-docs/: action.yml
.github/workflows/: build.yml  ci-cd.yml  ci-linux-vira.yml  ci-linux-virapy.yml  macos-arm-vira.yml  macos-arm-virapy.yml  macos-vira.yml  macos-virapy.yml  windows-vira.yml  windows-virapy.yml
cmake/: ViraConfig.cmake.in  conda-toolchain.cmake  viraConfig.cmake.in
cmake/fetch/: ViraFetchCSPICE.cmake  ViraFetchIndicators.cmake  ViraFetchPlog.cmake  ViraFetchSTB.cmake  ViraFetchTCLAP.cmake  ViraFetchTermcolor.cmake
cmake/find/: ViraFindCFITSIO.cmake  ViraFindFFTW3.cmake  ViraFindGDAL.cmake  ViraFindLZ4.cmake  ViraFindProjDB.cmake  ViraFindTIFF.cmake  ViraFindYAMLCPP.cmake
cmake/helpers/: CopyDependencies.cmake  MarkSystemLibrary.cmake  SimplePackageHelpers.cmake
cmake/setup/: CustomCompilerFlags.cmake  CustomVcpkgSetup.cmake  CustomWarnings.cmake
dependencies/: conanfile.py  environment.yml  vcpkg.json
dependencies/recipe/: bld.bat  build.sh  meta.yaml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  docs-requirements.yml  index.rst
docs/_static/css/: custom.css
docs/build_instructions/: configurations.md  index.rst  linux.md  macos.md  visual_studio.md  windows.md
docs/theory/: brdf.rst  fresnel.rst  index.rst  lights.rst  microfacets.rst  monte_carlo.rst  polarization.rst  radiometry.rst  refractive_index.rst  rendering_equation.rst  rendering_equation_2.rst  sensors.rst
docs/tools/: index.rst  vira_dem2qld.rst  vira_spcmap2qld.rst  vira_tycho2.rst
docs/vira/: constraints.rst  index.rst  math.rst  reference_frame.rst  rotation.rst  sampling.rst  scene.rst  spectral_data.rst  spice_utils.rst  vec.rst
docs/vira/cameras/: camera.rst  filter_arrays.rst  index.rst
docs/vira/cameras/apertures/: aperture.rst  circular_aperture.rst  index.rst
docs/vira/cameras/distortions/: brown_distortion.rst  distortion.rst  index.rst  opencv_distortion.rst  owen_distortion.rst
docs/vira/cameras/noise_models/: index.rst  noise_model.rst
docs/vira/cameras/photosites/: index.rst  photosite.rst
docs/vira/cameras/psfs/: airy_disk.rst  gaussian_psf.rst  index.rst  psf.rst
docs/vira/dems/: dem.rst  dem_projection.rst  dem_utils.rst  georeference_image.rst  index.rst
docs/vira/dems/interfaces/: gdal_interface.rst  index.rst  spcmap_interface.rst
docs/vira/geometry/: ellipsoid.rst  index.rst  mesh.rst  triangle.rst  vertex.rst
docs/vira/geometry/interfaces/: geometry_interface.rst  index.rst
docs/vira/images/: color_map.rst  compositing.rst  image.rst  image_pixel.rst  image_utils.rst  index.rst  resolution.rst
docs/vira/images/interfaces/: image_interface.rst  index.rst
docs/vira/lights/: index.rst  light.rst  point_light.rst  sphere_light.rst
docs/vira/materials/: index.rst  lambertian.rst  material.rst  mcewen.rst  pbr_material.rst
docs/vira/quipu/: dem_quipu.rst  index.rst  star_quipu.rst
docs/vira/rendering/: cpu_path_tracer.rst  cpu_rasterizer.rst  cpu_unresolved_renderer.rst  index.rst  passes.rst  ray.rst
docs/vira/rendering/acceleration/: aabb.rst  blas.rst  index.rst  nodes.rst  tlas.rst  vira_bvh.rst  vira_embree.rst
docs/vira/scene/: group.rst  ids.rst  index.rst  instance.rst  lod_manager.rst
docs/vira/units/: index.rst  units.rst
docs/vira/unresolved/: index.rst  magnitude.rst  star.rst  star_catalogue.rst  star_light.rst  unresolved_object.rst
docs/vira/unresolved/interfaces/: index.rst  tycho2_interface.rst
docs/vira/utils/: index.rst  utils.rst  valid_value.rst
docs/virapy/: index.rst
docs/virapy/cameras/: camera.rst  distortions.rst  index.rst
examples/: CMakeLists.txt  README.md
examples/01_vira_box/: CMakeLists.txt  README.md  vira_box.cpp
examples/02_stars/: CMakeLists.txt  README.md  vira_stars.cpp
examples/03_orex/: CMakeLists.txt  README.md  meta_kernel.tm  vira_orex.cpp
examples/04_moon/: CMakeLists.txt  README.md  dem_config.yml  ldem128_config.yml  meta_kernel.tm  vira_moon.cpp
examples/virapy_examples/: pyvira_orex.py
include/implementation/: logger.ipp  math.ipp  reference_frame.ipp  rotation.ipp  sampling.ipp  scene.ipp  spectral_data.ipp  spice_utils.ipp
include/vira/: constraints.hpp  debug.hpp  logger.hpp  math.hpp  reference_frame.hpp  rotation.hpp  sampling.hpp  scene.hpp  spectral_data.hpp  spice_utils.hpp  vec.hpp  vira-vulkan.hpp  vira.hpp
include/vira/dems/: dem.hpp  (+3 more)
scratch/: README.md
scripts/: download_albedo.bat  download_albedo.sh  download_dems.bat  download_dems.sh  download_kernels.bat  download_kernels.sh  download_tycho.bat  download_tycho.sh
source/shaders/: CMakeLists.txt
source/shaders/fragment/: mcewan.frag  testFrag.frag
source/shaders/pathtracer/: hit_radiance.glsl  hit_shadow.glsl  miss_radiance.glsl  miss_shadow.glsl  ray_generation.glsl
source/shaders/vertex/: pinhole.vert  testVert.vert
source/tools/: CMakeLists.txt  tool_utils.hpp  vira_dem2obj.cpp  vira_dem2qld.cpp  vira_spcmap2qld.cpp  vira_tycho2.cpp
source/vira/: CMakeLists.txt
source/vira-vulkan/: vira-vulkan.cpp
source/virapy/: CMakeLists.txt  init_bindings.cpp
source/virapy/bindings/: math_py.ipp  reference_frame_py.ipp  rotation_py.ipp  spice_utils_py.ipp  vec_py.ipp
source/virapy/packaging/: README.md  __init__.py  _version.py.in  pyproject.toml  setup.py
tests/: CMakeLists.txt
tests/packaging/: CMakeLists.txt  main.cpp
tests/quipu/: CMakeLists.txt  test_quipu_io.cpp
tests/unit/: test_vira_units.cpp
tests/vulkan/: CMakeLists.txt  meta_kernel.tm  test_ViraBuffer.cpp  test_ViraDescriptors.cpp  test_ViraDevice.cpp  test_ViraPipeline.cpp  test_ViraSwapchain.cpp  test_Vulkan.cpp  vulkan_testing.hpp
(+228 files in other folders)
